third_party/move/move-compiler/tests/move_check/parser/constants_simple.exp
error[E01007]: invalid byte string
   ┌─ tests/move_check/parser/constants_simple.move:16:29
   │
16 │     const C12: vector<u8> = "<empty>";
   │                             ^ String literal must begin with b" (for a byte string) or h" (for a hex string)

